# BaseService

./: README.md
code/EVA/: CMakeLists.txt
code/EVA/common/data_common/: cn.uxt  serverlist
code/EVA/common/src/: CMakeLists.txt
code/EVA/common/src/game_share/: CMakeLists.txt  bit_set_ext2.h  define_attrib.pb.cc  define_attrib.pb.h  define_pro.pb.cc  define_pro.pb.h  define_sys.pb.cc  define_sys.pb.h  eval_expression.cpp  eval_expression.h  game-share.pc.in  game_def.h  next_session.h  object_pool.h  ranking_change_near.h  ranking_slot.h  rmb_shop.h  sigslot.h  stdpch.h  timer.cpp  timer.h  tools.h  udp_msg.cpp  udp_msg.h  utils.h
code/EVA/server/: CMakeLists.txt  _del_log.bat  _robot_start .bat  _robot_stop .bat  _shard_start.bat  _shard_stop.bat  admin_executor_service.cfg  admin_service.cfg  client_robot.cfg  common.cfg  frontend_service.cfg  login_service.cfg  msg.xml  naming_service.cfg  persistant_data_service.cfg  player_logic_service.cfg  schedule_service.cfg  shard.screen.rc
code/EVA/server/admin_modules/: CMakeLists.txt  admin_modules_itf.h  aes_module.cpp  as_module.cpp
code/EVA/server/admin_service/: CMakeLists.txt  admin_service.cpp
code/EVA/server/client_robot/: CMakeLists.txt  client_robot.cpp
code/EVA/server/frontend_service/: CMakeLists.txt  check.h  client.cpp  client.h  client_mgr.cpp  client_mgr.h  frontend_service.cpp  frontend_service.h  msg_client.h  msg_client_tcp.cpp  msg_client_udp.cpp  msg_fes.cpp  msg_fes.h  msg_fes_broadcast.cpp  msg_fes_broadcast.h  msg_forwarding.cpp  msg_forwarding.h  msg_timeout_event.cpp  msg_timeout_event.h  session_mgr.cpp  session_mgr.h  stdpch.h  udp_sender.cpp  udp_sender.h
code/EVA/server/frontend_service/udp/: client_host.cpp  client_host.h  fe_receive_sub.cpp  fe_receive_sub.h  fe_receive_task.cpp  fe_receive_task.h  fe_types.h
code/EVA/server/login_service/: CMakeLists.txt  CMakeLists.txt.bak  auth_mgr.cpp  auth_mgr.h  connection_client.cpp  connection_client.h  fes_mgr.h  login_mgr.cpp  login_mgr.h  login_service.cpp  login_service.h  public_def.h  sender.cpp  sender.h
code/EVA/server/login_service/module_login/: login_module.cpp  login_modules.cpp  login_modules_itf.h
code/EVA/server/naming_service/: CMakeLists.txt  naming_service.cpp
code/EVA/server/persistant_data_service/: CMakeLists.txt  db_connect.cpp  db_connect.h  db_load_table.h  db_logic.cpp  db_logic.h  db_main_func.cpp  db_main_func.h  db_main_load_all.cpp  db_manager_messages.cpp  db_manager_messages.h  db_mgr.cpp  db_mgr.h  db_mgr_exec.cpp  db_struct.h  db_sub_func.cpp  db_sub_func.h  db_worker.cpp  db_worker.h  persistant_data_service.cpp  persistant_data_service.h
code/EVA/server/persistant_data_service/receiver_mgr/: recv_login.cpp  recv_login.h
code/EVA/server/persistant_data_service/sender_mgr/: sender_login.cpp  sender_login.h
code/EVA/server/player_logic_service/: CMakeLists.txt  event_trigger.h  player_logic_service.cpp  player_logic_service.h  stdpch.h
code/EVA/server/player_logic_service/chat/: chat_logic.cpp  chat_logic.h
code/EVA/server/player_logic_service/login/: data_sync.cpp  data_sync.h  recv_login.cpp  recv_login.h  sender_login.cpp  sender_login.h
code/EVA/server/player_logic_service/lua/: auto_lua_callback.cpp  lua_event.h  lua_event_callback.cpp  lua_event_callback.h  lua_function.cpp  lua_function.h
code/EVA/server/player_logic_service/player/: player.cpp  player.h  player_data_helper.cpp  player_data_helper.h  player_mgr.cpp  player_mgr.h  player_timer_event.cpp  player_timer_event.h
code/EVA/server/player_logic_service/process_msg/: process_msg_fes.cpp  process_msg_fes.h  process_msg_pls.cpp  process_msg_pls.h
code/EVA/server/save_shard/rrd_graphs/: aes.ProcessUsedMemory.rrd  egs.ProcessUsedMemory.rrd  fes.ProcessUsedMemory.rrd  fes_0.FPSProcessMsg.rrd  fes_0.ProcessUsedMemory.rrd  lgc.ProcessUsedMemory.rrd  lgc_0.ProcessUsedMemory.rrd  pds.ProcessUsedMemory.rrd  ras.ProcessUsedMemory.rrd  rns.ProcessUsedMemory.rrd
code/EVA/server/schedule_service/: CMakeLists.txt  schedule_service.cpp
code/EVA/server/script/: BaseService.luaprj  Init.lua  Main.lua  Robot.luaprj  _FES.luaprj  _PLS.luaprj  _SCH.luaprj  service_logic.luaprj
code/EVA/server/script.pls/: load.pls.lua
code/EVA/server/script/DataTable/: ProtoMsg.pb  RoomConfig.json  RoomCreateCost.json  SpecialConfig.json  proto_msg.pb
code/EVA/server/script/Framework/: CJsonUtil.lua  Class.lua  InitFramework.lua  List.lua  Map.lua  MapMap.lua  MiddleClass.lua  Queue.lua  SimpleStateMachine.lua  Stack.lua  StateFul.lua  TimerMgr.lua  Utils.lua  functions.lua
code/EVA/server/script/PLS/: LuaTestMsg.lua
code/EVA/server/server_share/: CMakeLists.txt  auto_lua_base_callback.cpp  base_object.h  buf_fifo2.h  buf_fifo_ring.h  client_msg_desc.cpp  client_msg_desc.h  game_def.h  i18n_def.cpp  i18n_def.h  id_generate.cpp  id_generate.h  lua_base_function.cpp  lua_base_function.h  lua_engine.cpp  lua_engine.h  lua_param.cpp  lua_param.h  msg_leaf.cpp  msg_leaf.h  pbc-lua.h  pbc-lua53.c  ranking_change_near.h  ranking_slot.h  script_mgr.cpp  script_mgr.h  server_def.cpp  server_def.h  singleton_registry.h  stdpch.h  tools.cpp  tools.h  utils.h
code/EVA/server/static_table/: GameConfig.xml
code/EVA/tools/: CMakeLists.txt
code/EVA/tools/_fun2lua/: export  export_lua.bat  export_lua.pkg  export_lua_base.bat  export_lua_base.pkg  export_lua_robot.pkg  export_robot_lua.bat
code/EVA/tools/luafun_gen/: CMakeLists.txt  genlua_base.cfg  genlua_pls.cfg  genlua_robot.cfg  head_base.txt  head_pls.txt  main.cpp
code/EVA/tools/protobuf/: auto_protoc  auto_protoc.bat  define_attrib.proto  define_pro.proto  define_sys.proto  msg_c2s.proto  msg_client.proto  msg_player.proto  msg_s2c.proto  msg_service.proto
code/EVA/tools/server/: serverlist.xml
code/EVA/tools/service_daemon/: CMakeLists.txt  daemon_thread.cpp  daemon_thread.h  main.cpp
code/EVA/tools/tools_test/: CMakeLists.txt  main.cpp  test.cfg  test_google_hash.cpp  test_i18n.cpp  test_misc.cpp  test_misc.h  test_ranking.cpp  test_sigslot.cpp  test_sigslot.h  test_udp.cpp  test_zlib.cpp
(+533 files in other folders)
