
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/src )
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/src/game_share )
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/src/game_share/proto_msg )

SET(GAME_SHARE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/common/src/game_share)
SET(SERVER_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/server)

FIND_PACKAGE(ToLua REQUIRED)

IF(WITH_EVA)
  ADD_DEFINITIONS(-DEVA)
ENDIF(WITH_EVA)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(server)

IF(WITH_TOOLS)
  ADD_SUBDIRECTORY(tools)
ENDIF(WITH_TOOLS)

