FILE(GLOB SRC *.cpp *.h)

NL_TARGET_LIB(eva_adminmodules ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

TARGET_LINK_LIBRARIES(eva_adminmodules nelmisc nelnet)
NL_DEFAULT_PROPS(eva_adminmodules "Base, Library: Service Admin Modules")
NL_ADD_RUNTIME_FLAGS(eva_adminmodules)
NL_ADD_LIB_SUFFIX(eva_adminmodules)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

#INSTALL(TARGETS eva_adminmodules LIBRARY DESTINATION ${EVA_LIB_PREFIX} ARCHIVE DESTINATION ${EVA_LIB_PREFIX} COMPONENT libraries)
IF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)
  INSTALL(TARGETS eva_adminmodules LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
ENDIF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)
