FILE(GLOB SRC *.cpp *.h)
FILE(GLOB SRC_PROTO_MSG  msg_proto/*.h msg_proto/*.cc)
FILE(GLOB SRC_STRUCT_MSG msg_struct/*.h msg_struct/*.cpp)
FILE(GLOB SRC_DataBase   database/*.h database/*.cpp)
FILE(GLOB SRC_DBEngine   database/engine/*.h database/engine/*.cpp)
FILE(GLOB SRC_DBThreads  db_threads/*.h db_threads/*.cpp)

SOURCE_GROUP("MessageProto" FILES ${SRC_PROTO_MSG})
SOURCE_GROUP("MessageStruct" FILES ${SRC_STRUCT_MSG})
SOURCE_GROUP("DataBase" FILES ${SRC_DataBase})
SOURCE_GROUP("DBEngine" FILES ${SRC_DBEngine})
SOURCE_GROUP("db_threads" FILES ${SRC_DBThreads})

NL_TARGET_LIB(servershare ${SRC} ${SRC_PROTO_MSG} ${SRC_STRUCT_MSG} ${SRC_DataBase} ${SRC_DBEngine} ${SRC_DBThreads})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/server/src/server_share )
INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${LUA_INCLUDE_DIR} ${TOLUA_INCLUDE_DIR} ${PROTOBUF_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(  servershare
						nelmisc
						nelnet
						gameshare
						${LUA_LIBRARIES}
						${TOLUA_LIBRARIES}
						${MYSQL_LIBRARIES}
						${PROTOBUF_LIBRARIES})

NL_DEFAULT_PROPS(servershare "MT, Library: Service Shared")
NL_ADD_RUNTIME_FLAGS(servershare)
NL_ADD_LIB_SUFFIX(servershare)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

IF(WITH_PCH)
  ADD_NATIVE_PRECOMPILED_HEADER(servershare ${CMAKE_CURRENT_SOURCE_DIR}/stdpch.h ${CMAKE_CURRENT_SOURCE_DIR}/stdpch.cpp)
ENDIF(WITH_PCH)

#INSTALL(TARGETS servershare LIBRARY DESTINATION ${EVA_LIB_PREFIX} ARCHIVE DESTINATION ${EVA_LIB_PREFIX} COMPONENT libraries)
IF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)
  INSTALL(TARGETS servershare LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
ENDIF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)


